Fix social media icons--were cut off

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -88,3 +88,7 @@ a {
         font-size: 0.9em;
       }
             
+      .social.svg-icon {
+        width: 21px !important;
+      }
+      
